--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="apple-touch-fullscreen" content="YES">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="renderer" content="webkit">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="kuCity.css"> -->
   <title>myblogs</title>
   <style>
     body {
@@ -23,10 +25,19 @@
 
 <body>
   <noscript>
-    <strong>We're sorry but myblogs doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    <strong>We're sorry but myblogs doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <!-- <script src="jquery.min.js"></script> -->
+  <!-- <script src="http://www.jq22.com/jquery/jquery-1.9.1.js"></script> -->
+  <!-- <script src="kuCity.js"></script> -->
+  <!-- <script>
+    $('.search').kuCity();
+    $('.search3').kuCity();
+  </script> -->
 </body>
+
 
 </html>
